Issue #18667: Add missing "HAVE_FCHOWNAT" symbol to posix._have_functions.